[tool.poetry]
name = "finalproject_Bogdanov_Artem_m25-555"
version = "0.1.0"
description = "Final project valutatrade_hub"
authors = ["Богданов Артём <bogdartem1997@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10"
prompt = "^0.4.1"
prettytable = "^3.17.0"
asciinema = "^2.4.0"
dotenv = "^0.9.9"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []